# My-Jolly-journey

./: .gitignore  CMakeLists.txt  LICENSE
01/: main.cpp
02/: color.fragment.glsl  color.vertex.glsl  main.cpp
03/: 03.fragment.glsl  03.vertex.glsl  main.cpp
03/assets/: tex.dds
04/: 04.fragment.glsl  04.vertex.glsl  main.cpp  test.cpp
05/: 05.vertex.glsl  main.cpp
06/: main.cpp
07/: main.cpp
07/assets/: box_desc.ora
08/: main.cpp
08/assets/: window.glade
09/: ambientLighting.fragment.glsl  main.cpp
10/: main.cpp  material.fragment.glsl
11/: 11.vertex.glsl  lightmaps.fragment.glsl  main.cpp
12/: attenuation.fragment.glsl  directional.fragment.glsl  flashlight.spotlight.fragment.glsl  main.cpp  smooth.spotlight.fragment.glsl
13/: 13.vertex.glsl  main.cpp  multilight.fragment.glsl
14/: 14.fragment.glsl  14.vertex.glsl  assimp_model_example.cpp
15/: 15.fragment.glsl  depth_testing_example_app.cpp  depth_testing_example_app.hpp  visualizeDepth.fragment.glsl
16/: 16.fragment.glsl  stencil_testing_example_app.cpp
17/: 17.vertex.glsl  bleeding_app.cpp  bleeding_app.hpp  discard.fragment.glsl
18/: faceculling_app.cpp  faceculling_app.hpp
lib/: camera.hpp  mesh.hpp  model.hpp  mylib.hpp  shader.hpp
super/: main.cpp
template_code/: template01.cpp
understanding_camera/: main.cpp
